<resources>
    <string name="app_name">BookDiaryMobile</string>
    <string name="add_book">Add Book</string>
    <string name="book_cover_description">Book cover</string>
    <string name="read_on_date">Read on: %1$s</string>
    <string name="added_on_date">Added on: %1$s</string>
    <string name="hint_title">Title</string>
    <string name="hint_author">Author</string>
    <string name="hint_description_notes">Description / Notes</string>
    <string name="save_book">Save book</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="dialog_delete_title">Delete Book</string>
    <string name="dialog_delete_message">Are you sure you want to delete this book? This action cannot be undone.</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_delete">Delete</string>
    <string name="export_data">Export Data</string>
    <string name="import_data">Import Data</string>
    <string name="choose_cover">Choose Cover</string>
    <string name="import_warning_title">Warning</string>
    <string name="import_warning_message">This will replace all current data in the app. All existing books will be deleted. This action cannot be undone. Do you want to continue?</string>
    <string name="import_action_confirm">Continue</string>
    <string name="toggle_favorite_status">Toggle favorite status</string>
    <string name="favorite_indicator">Favorite indicator</string>
    <string name="action_move_to_read">Move to Read</string>
    <string name="title_update_read_book">Update Read Book</string>
    <string name="hint_read_date">Read Date</string>
    <string name="label_rating">Your Rating:</string>
    <string name="label_genre">Genre:</string>
    <string name="stats_select_period_label">Select period</string>
    <string name="stats_in_month_year">In %1$s %2$d you read:</string>
    <string name="stats_in_year">In %1$d you read:</string>
    <string name="stats_total_read">Total books read:</string>
    <string name="dialog_select_period_title">Select Period</string>
    <string name="export_in_progress">Exporting data…</string>
    <string name="export_success_message">Export successful!</string>
    <string name="export_failed_message">Export failed. Please check logs for details.</string>
    <string name="import_in_progress">Importing data…</string>
    <string name="import_success_title">Import Successful</string>
    <string name="import_success_message">Your data has been successfully imported. The app will now restart to apply the changes.</string>
    <string name="import_failed_title">Import Failed</string>
    <string name="import_failed_message">Data could not be imported. The backup file might be corrupted. The app will now restart.</string>
    <string name="dialog_ok">OK</string>
    <string name="empty_state_read">You haven\'t added any read books yet.\nTap the \'+\' button to start!</string>
    <string name="empty_state_to_read">Your \'To Read\' list is empty.\nTap the \'+\' button to add a book!</string>
    <string name="empty_state_favorites">You haven\'t added any books to your favorites yet.</string>
    <string name="validation_select_genre">Please select a genre</string>
    <string name="menu_my_books">My Books</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_to_read">To Read</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_statistics">Statistics</string>
    <string name="mark_as_read">Mark as Read!</string>

    <string-array name="book_genres">
        <item>Select genre</item>
        <item>Fantasy</item>
        <item>Science fiction</item>
        <item>Detective</item>
        <item>Thriller</item>
        <item>Novel</item>
        <item>Romance</item>
        <item>Horror</item>
        <item>Adventure</item>
        <item>Historical</item>
        <item>Young adult</item>
        <item>Dystopia</item>
        <item>Classics</item>
        <item>Biography</item>
        <item>Psychology</item>
        <item>Self-help</item>
        <item>Poetry</item>
        <item>Children\'s literature</item>
        <item>Other</item>
    </string-array>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

</resources>