<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddEditBookFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- Назва книги -->
            <TextView
                android:id="@+id/label_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_title"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textColor="?attr/colorControlNormal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:paddingTop="6dp"
                android:paddingBottom="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_title" />

            <!-- Обкладинка -->
            <ImageView
                android:id="@+id/image_view_add_cover"
                android:layout_width="140dp"
                android:layout_height="210dp"
                android:layout_marginTop="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder_cover_sharp"
                android:contentDescription="@string/book_cover_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_text_title" />

            <!-- Блок інформації праворуч від обкладинки -->
            <TextView
                android:id="@+id/label_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:text="@string/hint_author"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textColor="?attr/colorControlNormal"
                app:layout_constraintStart_toEndOf="@id/image_view_add_cover"
                app:layout_constraintTop_toTopOf="@id/image_view_add_cover" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_author"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:inputType="textCapSentences"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:paddingTop="6dp"
                android:paddingBottom="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_view_add_cover"
                app:layout_constraintTop_toBottomOf="@id/label_author"/>

            <TextView
                android:id="@+id/label_genre_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp"
                android:text="@string/label_genre"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textColor="?attr/colorControlNormal"
                app:layout_constraintStart_toEndOf="@id/image_view_add_cover"
                app:layout_constraintTop_toBottomOf="@id/edit_text_author"/>

            <Spinner
                android:id="@+id/spinner_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_view_add_cover"
                app:layout_constraintTop_toBottomOf="@id/label_genre_edit"/>

            <!-- Поле дати (прив'язане до низу обкладинки) -->
            <TextView
                android:id="@+id/label_date_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="2dp"
                android:text="@string/hint_read_date"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textColor="?attr/colorControlNormal"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/edit_text_date_read"
                app:layout_constraintStart_toEndOf="@id/image_view_add_cover"
                tools:visibility="visible"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_date_read"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:focusable="false"
                android:cursorVisible="false"
                android:inputType="none"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/image_view_add_cover"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_view_add_cover"
                tools:visibility="visible"/>

            <!-- Кнопки під обкладинкою -->
            <ImageButton
                android:id="@+id/button_add_from_gallery"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/circle_button_background"
                android:src="@drawable/ic_gallery"
                app:layout_constraintEnd_toStartOf="@id/button_add_from_camera"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@id/image_view_add_cover"
                app:layout_constraintTop_toBottomOf="@id/image_view_add_cover"/>

            <ImageButton
                android:id="@+id/button_add_from_camera"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/circle_button_background"
                android:src="@drawable/ic_camera"
                app:layout_constraintEnd_toEndOf="@id/image_view_add_cover"
                app:layout_constraintStart_toEndOf="@id/button_add_from_gallery"
                app:layout_constraintTop_toTopOf="@id/button_add_from_gallery"/>

            <!-- Розділювач, що відділяє верхній блок -->
            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/top_content_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="button_add_from_gallery, image_view_add_cover" />

            <!-- Рейтинг -->
            <TextView
                android:id="@+id/label_rating_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_rating"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textColor="?attr/colorControlNormal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/top_content_barrier"
                android:visibility="gone"
                tools:visibility="visible"/>

            <RatingBar
                android:id="@+id/rating_bar_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:numStars="5"
                android:stepSize="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_rating_edit"
                android:visibility="gone"
                tools:visibility="visible"/>

            <!-- Опис -->
            <TextView
                android:id="@+id/label_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/hint_description_notes"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textColor="?attr/colorControlNormal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rating_bar_edit" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:lines="1"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:paddingTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <!-- Кнопка "Зберегти" внизу -->
    <Button
        android:id="@+id/button_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_book"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>